Files files and more files

--- a/index.html
+++ b/index.html
@@ -1,58 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl">
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-    <table>
-        <caption>OFERTA ODZIEŻOWA</caption>
-        <thead>
-            <tr>
-                <th rowspan="2"></th>
-                <th colspan="6">UBRANIA</th>
-                <th rowspan="2">RABAT</th>
-            </tr>
-            <tr>
-                <th colspan="3">SPODNIE</th>
-                <th colspan="3">KOSZULE</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mężczyźni</td>
-                <td>48</td>
-                <td>50</td>
-                <td>52</td>
-                <td>M</td>
-                <td>L</td>
-                <td>XL</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Kobiety</td>
-                <td>36</td>
-                <td>38</td>
-                <td>40</td>
-                <td>S</td>
-                <td>M</td>
-                <td>L</td>
-                <td rowspan="2">0%</td>
-            </tr>
-            <tr>
-                <td>Dzieci</td>
-                <td>90/50</td>
-                <td>98/56</td>
-                <td>110/60</td>
-                <td>116/62</td>
-                <td>122/64</td>
-                <td>126/68</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>            
-                <td colspan="8">Podane rozmiary są rozmiarami zewnętrznymi</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="cointeiner">
+        <header>
+
+        </header>
+        <aside>
+
+        </aside>
+        <div class="hotel">
+
+        </div>
+        <div class="descrip">
+
+        </div>
+        <div class="comment">
+
+        </div>
+        <div class="booking">
+            s
+        </div>
+    </div>
 </body>
+
 </html>
