--- a/index.html
+++ b/index.html
@@ -5,27 +5,165 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="cointeiner">
         <header>
-
+            <img src="img/logo.png" alt="logo" class="logo">
+            <input type="text" placeholder="Search hotels">
+            <img src="img/svg/chat.svg" alt="chat icon" class="chat">
+            <img src="img/user.jpg" alt="user icon" class="user">
+            <p>Jonas</p>
         </header>
-        <aside>
-
-        </aside>
-        <div class="hotel">
-
-        </div>
-        <div class="descrip">
-
-        </div>
-        <div class="comment">
-
-        </div>
-        <div class="booking">
-            s
+        <div class="content">
+            <aside>
+                <nav>
+                    <a href="#">
+                        <h2>
+                            HOTEL
+                        </h2>
+                    </a>
+                    <a href="#">
+                        <h2>
+                            FLIGHT
+                        </h2>
+                    </a>
+                    <a href="#">
+                        <h1>
+                            CAR RENTAL
+                        </h1>
+                    </a>
+                    <a href="#">
+                        <h2>
+                            TOURS
+                        </h2>
+                    </a>
+                </nav>
+                <p>
+                    ©2021 Oskar W.
+                </p>
+            </aside>
+            <section>
+                <div class="hotel">
+                    <img src="img/hotel-1.jpg" alt="Kliknij, aby pobrać zjęcie">
+                    <img src="img/hotel-2.jpg" alt="Kliknij, aby pobrać zjęcie">
+                    <img src="img/hotel-3.jpg" alt="Kliknij, aby pobrać zjęcie">
+                    <div class="hotelName">
+                        <h2>
+                            HOTEL LAST PALMAS
+                        </h2>
+                        <p>
+                            Albufeira, Portugal
+                        </p>
+                    </div>
+                    <div class="rate">
+                        <h2>
+                            8,6
+                        </h2>
+                        <p>
+                            420 votes
+                        </p>
+                    </div>
+                </div>
+                <div class="descrip">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi nisi dignissimos debitis ratione
+                        sapiente saepe. Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto
+                        voluptate.
+                    </p>
+                    <p>
+                        Accusantium cumque, quas, ut corporis incidunt deserunt quae architecto voluptate delectus,
+                        inventore iure aliquid aliquam.
+                    </p>
+                    <hr>
+                    <table>
+                        <tr>
+                            <td>
+                                Close to the beach
+                            </td>
+                            <td>
+                                Breakfest included
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Free aiport shuttle
+                            </td>
+                            <td>
+                                Free wifi in all rooms
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Air conditioning and heating
+                            </td>
+                            <td>
+                                Pets allowed
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                We speak all languages
+                            </td>
+                            <td>
+                                Perfect for families
+                            </td>
+                        </tr>
+                    </table>
+                    <hr>
+                    <p class="end">
+                        Lucy and 3 other friends recommend this hotel.
+                        <img src="img/user-3.jpg">
+                        <img src="img/user-4.jpg">
+                        <img src="img/user-5.jpg">
+                        <img src="img/user-6.jpg">
+                    </p>
+                </div>
+                <div class="comment">
+                    <div class="com1">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
+                        animi,
+                        totam, itaque officia ex.
+                        <img src="img/user-1.jpg">
+                        <p>
+                            Nick Smith<br>
+                            Feb 23rd,2017
+                        </p>
+                        <h2>
+                            7,8
+                        </h2>
+                    </div>
+                    <div class="com1">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
+                        animi.
+                        <img src="img/user-2.jpg">
+                        <p>
+                            Mary Thomas<br>
+                            Sep 13th,2017
+                        </p>
+                        <h2>
+                            9,3
+                        </h2>
+                    </div>
+                    <a href="#">
+                        <p>
+                            Show all →
+                        </p>
+                    </a>
+                </div>
+                <div class="booking">
+                    <h3>
+                        GOOD NEWS! WE HAVE 4 FREE ROOMS FOR YOURS SELECTED DATES!<br>
+                        <a href="#">
+                            <button>
+                                BOOK NOW
+                            </button>
+                        </a>
+                    </h3>
+                </div>
+            </section>
         </div>
     </div>
 </body>
