--- a/index.html
+++ b/index.html
@@ -50,22 +50,28 @@
                     <img src="img/hotel-1.jpg" alt="Kliknij, aby pobrać zjęcie">
                     <img src="img/hotel-2.jpg" alt="Kliknij, aby pobrać zjęcie">
                     <img src="img/hotel-3.jpg" alt="Kliknij, aby pobrać zjęcie">
-                    <div class="hotelName">
-                        <h2>
-                            HOTEL LAST PALMAS
-                        </h2>
-                        <p>
-                            Albufeira, Portugal
-                        </p>
-                    </div>
-                    <div class="rate">
-                        <h2>
-                            8,6
-                        </h2>
-                        <p>
-                            420 votes
-                        </p>
-                    </div>
+                    <table class="hotelName">
+                        <tr>
+                            <td>
+                                <h2>
+                                    HOTEL LAST PALMAS
+                                </h2>
+                            </td>
+                            <td>
+                                <p>
+                                    Albufeira, Portugal
+                                </p>
+                            </td>
+                            <td class="rate">
+                                <h2>
+                                    8,6
+                                </h2>
+                                <p>
+                                    420 votes
+                                </p>
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="descrip">
                     <p>
@@ -113,34 +119,44 @@
                         </tr>
                     </table>
                     <hr>
-                    <p class="end">
-                        Lucy and 3 other friends recommend this hotel.
-                        <img src="img/user-3.jpg">
-                        <img src="img/user-4.jpg">
-                        <img src="img/user-5.jpg">
-                        <img src="img/user-6.jpg">
-                    </p>
+                    <table class="end">
+                        <tr>
+                            <td>
+                                Lucy and 3 other friends recommend this hotel.
+                            </td>
+                            <td>
+                                <img src="img/user-3.jpg">
+                                <img src="img/user-4.jpg">
+                                <img src="img/user-5.jpg">
+                                <img src="img/user-6.jpg">
+                            </td>
+                        </tr>
+                    </table>
                 </div>
                 <div class="comment">
-                    <div class="com1">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
-                        animi,
-                        totam, itaque officia ex.
+                    <div class="com">
+                        <img src="img/SVG/bookmark.svg" alt="">
+                        <blockquote>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
+                            animi, totam, itaque officia ex.
+                        </blockquote>
                         <img src="img/user-1.jpg">
                         <p>
-                            Nick Smith<br>
+                            <b>Nick Smith</b><br>
                             Feb 23rd,2017
                         </p>
                         <h2>
                             7,8
                         </h2>
                     </div>
-                    <div class="com1">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
-                        animi.
+                    <div class="com">
+                        <blockquote>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque architecto dicta
+                            animi.
+                        </blockquote>
                         <img src="img/user-2.jpg">
                         <p>
-                            Mary Thomas<br>
+                            <b>Mary Thomas</b><br>
                             Sep 13th,2017
                         </p>
                         <h2>
@@ -148,9 +164,7 @@
                         </h2>
                     </div>
                     <a href="#">
-                        <p>
-                            Show all →
-                        </p>
+                        Show all →
                     </a>
                 </div>
                 <div class="booking">
