--- a/index.html
+++ b/index.html
@@ -119,19 +119,15 @@
                         </tr>
                     </table>
                     <hr>
-                    <table class="end">
-                        <tr>
-                            <td>
-                                Lucy and 3 other friends recommend this hotel.
-                            </td>
-                            <td>
-                                <img src="img/user-3.jpg">
-                                <img src="img/user-4.jpg">
-                                <img src="img/user-5.jpg">
-                                <img src="img/user-6.jpg">
-                            </td>
-                        </tr>
-                    </table>
+                    <p class="lucy">
+                        Lucy and 3 other friends recommend this hotel.
+                    </p>
+                    <div class="userspic">
+                        <img src="img/user-3.jpg">
+                        <img src="img/user-4.jpg">
+                        <img src="img/user-5.jpg">
+                        <img src="img/user-6.jpg">
+                    </div>
                 </div>
                 <div class="comment">
                     <div class="com">
