--- a/index.html
+++ b/index.html
@@ -1,58 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <table>
-        <caption>OFERTA ODZIEŻOWA</caption>
-        <thead>
-            <tr>
-                <th rowspan="2"></th>
-                <th colspan="6">UBRANIA</th>
-                <th rowspan="2">RABAT</th>
-            </tr>
-            <tr>
-                <th colspan="3">SPODNIE</th>
-                <th colspan="3">KOSZULE</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mężczyźni</td>
-                <td>48</td>
-                <td>50</td>
-                <td>52</td>
-                <td>M</td>
-                <td>L</td>
-                <td>XL</td>
-                <td>-</td>
-            </tr>
-            <tr>
-                <td>Kobiety</td>
-                <td>36</td>
-                <td>38</td>
-                <td>40</td>
-                <td>S</td>
-                <td>M</td>
-                <td>L</td>
-                <td rowspan="2">0%</td>
-            </tr>
-            <tr>
-                <td>Dzieci</td>
-                <td>90/50</td>
-                <td>98/56</td>
-                <td>110/60</td>
-                <td>116/62</td>
-                <td>122/64</td>
-                <td>126/68</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>            
-                <td colspan="8">Podane rozmiary są rozmiarami zewnętrznymi</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div class="ad">
+        <img src="images/Logo.png" class="logo">
+        <img src="images/top-frame.png" class="topframe">
+
+        <ul class="list">
+            <li><b>Oprocentowanie<br> i prowizja niższe o 33%</b></li>
+            <li>Okres kredytowania<br><b>do 5 lat</b></li>
+            <li>Kwota pożyczki<br><b>do 2000 000 zł</b></li>
+        </ul>
+        <button class="redButton">SPRAWDŹ ></button>
+        <img src="images/mrs.png" class="parrots2">
+
+        <!-- <img src="images/Parrots33.png" class="parrots"> -->
+        <img src="images/text1.png" class="text">
+        <img src="images/main-frame.png" class="contFrame">
+
+        <p class="ad__paragrapf ad__paragrapf-down ad__paragrapf-left">
+            SPRAWDŹ KOSZT POŻYCZKI
+        </p>
+        <p class="ad__paragrapf ad__paragrapf-down ad__paragrapf-right">
+            RRSO 9.99%
+        </p>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
+    <script src="JavaScript/main.js"></script>
 </body>
+
 </html>
